Fix focus rings cutoff by `overflow: hidden`

--- a/src/components/pagination/_pagination_button.scss
+++ b/src/components/pagination/_pagination_button.scss
@@ -3,7 +3,7 @@
   padding: 0;
   text-align: center;
   border-radius: $euiBorderRadius;
-  line-height: 1;
+  outline-offset: -$euiFocusRingSize;
 }
 
 .euiPaginationButton-isActive {
@@ -21,6 +21,10 @@
       text-decoration: underline;
     }
   }
+}
+
+.euiPaginationArrowButton {
+  outline-offset: -$euiFocusRingSize;
 }
 
 .euiPaginationButton-isPlaceholder {
